[package]
name = "bv2av"
version = "0.1.0"
license = "WTFPL"
authors = ["poly000 <1348292515@qq.com>"]
edition = "2018"
description = "A converter for bilibili.com video's ID. | Bilibili的视频id的转换器。"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"


